--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Gibreel Bashir",
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.8.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
