--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "author": "Gibreel Bashir",
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.8.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -25,6 +24,7 @@
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.4"
+    "mysql2": "^3.9.4",
+    "universal-analytics": "^0.5.3"
   }
 }
